--- a/ressources/css/styles.css
+++ b/ressources/css/styles.css
@@ -1,22 +1,30 @@
 *, *::after, *::before {
     box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
     font-family: 'Monda', sans-serif;
     font-size: 19px;
     color: black;    
     transition: all ease 0.4s;
+    overflow-x: hidden;
 }
 
 a {
     text-decoration: none;
 }
 
+body {
+    background-color: rgba(255, 242, 224, 0.459);
+}
+
 header h1 {
     font-family: 'Julius Sans One', sans-serif;
-    font-size: 52px;
+    font-size: 2em;
     border-radius: 20px;
 }
 
 header {
+    height: 80px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -32,12 +40,17 @@ nav ul {
     align-items: center;
 }
 
-nav ul li {
-    padding: 0.55em;
+nav ul li {    
+    border-radius: 10px;
+    padding: 0.25em 0.55em;
 }
 
 nav ul li a:hover {
     color: rgb(25, 177, 126);
+}
+
+nav ul li:hover {
+    border: 1px solid black;
 }
 
 header h1:hover {
@@ -45,16 +58,70 @@ header h1:hover {
 }
 
 header img {
-    width: 5%;
+    width: 10%;
     display: none;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 800px) {
+    header{
+        border: none;
+        height: 100%;
+    }
+    img {
+        cursor: pointer;
+    }
     header img {
         width: 5%;
         display: block;
     }
-    header nav {
-        display: none;
+    
+    nav {
+        background-color: rgb(207, 222, 223);
+        position: absolute;
+        top:52px;
+        height: 90%;
+        width: 100%;
+        left: 100%;
     }
+    nav ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 100%;
+        width: 100%;
+    }
+    nav ul li:hover {
+        text-align: center;
+        width: 100%;
+        border-radius: 0px;
+        background-color: blanchedalmond;
+        border: none;
+    }
+    nav ul li a:hover {
+        text-decoration: underline;
+        color: black;
+    }
+
+    .is-active {
+        right: 0px;
+        left: 0px;
+    }
+
+
+}
+main {
+    display: flex;
+    flex-direction: row;
+}
+.box {
+    align-self: center;
+    justify-content: center;
+    margin: auto;
+    background-color: cornflowerblue;
+    padding: 20px;
+}
+
+.boxer {
+    font-size: 50px;
 }
