--- a/ressources/css/styles.css
+++ b/ressources/css/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-    font-family: 'Monda', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 19px;
     color: black;    
     transition: all ease 0.4s;
@@ -14,13 +14,18 @@ a {
 }
 
 body {
-    background-color: rgba(255, 242, 224, 0.459);
+    background-color: rgba(255, 255, 255, 0.459);
 }
 
 header h1 {
-    font-family: 'Julius Sans One', sans-serif;
+    font-family: 'Proza Libre', sans-serif;
     font-size: 2em;
     border-radius: 20px;
+}
+
+main h2 {
+    font-family: 'Proza Libre', sans-serif;
+    font-size: 1.5em;
 }
 
 header {
@@ -40,7 +45,7 @@ nav ul {
     align-items: center;
 }
 
-nav ul li {    
+nav ul li {
     border-radius: 10px;
     padding: 0.25em 0.55em;
 }
@@ -64,7 +69,6 @@ header img {
 
 @media screen and (max-width: 800px) {
     header{
-        border: none;
         height: 100%;
     }
     img {
@@ -78,19 +82,21 @@ header img {
     nav {
         background-color: rgb(207, 222, 223);
         position: absolute;
-        top:52px;
+        top:68px;
         height: 90%;
         width: 0%;
+        right: 0px;
         
     }
     nav ul{
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
         height: 100%;
         width: 100%;
     }
+
     nav ul li:hover {
         text-align: center;
         width: 100%;
@@ -109,22 +115,13 @@ header img {
 
 }
 
-<<<<<<< HEAD
-
-=======
->>>>>>> 4877450cc9d007f9093a862971f79798653941b0
-main {
-    display: flex;
-    flex-direction: row;
+.section {
+    display: none;
 }
-.box {
-    align-self: center;
-    justify-content: center;
-    margin: auto;
-    background-color: cornflowerblue;
-    padding: 20px;
+.about-me {
+    display: block;
 }
 
-.boxer {
-    font-size: 50px;
+.active {
+    display: block;
 }
